--- a/popup/pop-page2.html
+++ b/popup/pop-page2.html
@@ -11,8 +11,8 @@
     <div class="pop-page">
       <div class="popTopWrap">
         <div class="popTitWrap">
-          <a href="pop-page1.html">이용약관</a>
-          <a href="pop-page2.html">개인정보처리방침</a>
+          <a class="pop-page-nontit" href="pop-page1.html">이용약관</a>
+          <a class="pop-page-tit" href="pop-page2.html">개인정보처리방침</a>
         </div>
         <!-- 엑스이미지 -->
         <a class="close-btn" href="javascript:closePopup()"
@@ -295,32 +295,6 @@
     <script>
       function closePopup() {
         window.close();
-      }
-      // Get the button
-      let mybutton = document.getElementById("myBtn");
-
-      // When the user scrolls down 20px from the top of the document, show the button
-      window.onscroll = function () {
-        scrollFunction();
-      };
-
-      function scrollFunction() {
-        if (
-          document.body.scrollTop > 20 ||
-          document.documentElement.scrollTop > 20
-        ) {
-          //mybutton.style.display = "block";
-          mybutton.style.opacity = "1";
-        } else {
-          //mybutton.style.display = "none";
-          mybutton.style.opacity = "0";
-        }
-      }
-
-      // When the user clicks on the button, scroll to the top of the document
-      function topFunction() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
       }
     </script>
   </body>
