--- a/product/product-top1.html
+++ b/product/product-top1.html
@@ -363,7 +363,7 @@
                       alt=""
                       class="btn-bottom-close2"
                   /></a>
-                  <a href="javascript:openPopup5()" class="btn-ViewOriginal"
+                  <a href="javascript:pop-page-top1()" class="btn-ViewOriginal"
                     >원본보기
                     <img
                       src="https://sohonara.mysoho.com/assets/shop/img/btn/h15_plus.png"
