--- a/popup/pop-page-one-piece3 copy.html
+++ b/popup/pop-page-one-piece3 copy.html
@@ -5,71 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      .tbl-terms {
-        font-size: 13px;
-      }
-      .popTopWrap {
-        display: flex;
-        justify-content: space-between;
-        border: 1px solid #e4e4e4;
-      }
-      a {
-        color: black;
-        text-decoration: none;
-      }
-      .close-btn {
-        width: 45px;
-        height: 48px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-left: 1px solid #e4e4e4;
-      }
-      .close-btn img {
-        width: 11px;
-      }
-      .popTitWrap {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-      }
-      .popTitWrap a {
-        width: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 13px;
-      }
-      .popTitWrap a:first-child {
-        color: #999999;
-        font-weight: bold;
-      }
-      .popTitWrap a:last-child {
-        border-bottom: 2px solid black;
-        font-weight: bold;
-      }
-
-      .t-div {
-        display: flex;
-      }
-      .cont {
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        min-height: 430px;
-        font-size: 15px;
-        flex-direction: column;
-      }
-      .cont img {
-        width: 40px;
-        margin-bottom: 20px;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/Notice-of-product-information.css" />
   </head>
   <body>
     <div class="popTopWrap">
