--- a/popup/pop-page4.html
+++ b/popup/pop-page4.html
@@ -90,48 +90,44 @@
     </style>
   </head>
   <body>
-    <div class="pop-page">
-      <div class="popTopWrap">
-        <div class="popTitWrap">
-          <a href="pop-page3.html">이용약관</a>
-          <a href="pop-page4.html">개인정보 수집·이용</a>
-        </div>
-        <!-- 엑스이미지 -->
-        <a class="close-btn" href="javascript:closePopup()"
-          ><img
-            src="https://image.makeshop.co.kr/mysoho/assets/shop/img/btn/h22_close_gray.png"
-            alt=""
-        /></a>
+    <div class="popTopWrap">
+      <div class="popTitWrap">
+        <a href="pop-page3.html">이용약관</a>
+        <a href="pop-page4.html">개인정보 수집·이용</a>
       </div>
-      <div class="tab-cont">
-        <div>
-          <div class="tbl-terms" style="text-align: left"></div>
-          <div class="tbl-detail">
-            <div class="t-div">
-              <div class="th">목적</div>
-              <div class="th">항목</div>
-              <div class="th">보유기간</div>
-            </div>
-            <div class="t-div">
-              <div class="td">
-                서비스 제공에 따른 요금정산, 콘텐츠 제공, 구매 및 요금결제,
-                물품배송, 금융거래 본인 인증 및 금융서비스
-              </div>
-              <div class="td">
-                주문자 정보(이름, 연락처)수령자 정보 (이름, 연락처, 주소)
-              </div>
-              <div class="td">
-                목적 달성 후 5년 (관계법률로 인해 필요 시, 일정기간 보존)
-              </div>
-            </div>
-            <div class="blue">
-              <br />
-              ※ 미동의 시, 비회원 구매가 제한됩니다.
-            </div>
-          </div>
+      <!-- 엑스이미지 -->
+      <a class="close-btn" href="javascript:closePopup()"
+        ><img
+          src="https://image.makeshop.co.kr/mysoho/assets/shop/img/btn/h22_close_gray.png"
+          alt=""
+      /></a>
+    </div>
+
+    <div class="tbl-terms" style="text-align: left"></div>
+    <div class="tbl-detail">
+      <div class="t-div">
+        <div class="th">목적</div>
+        <div class="th">항목</div>
+        <div class="th">보유기간</div>
+      </div>
+      <div class="t-div">
+        <div class="td">
+          서비스 제공에 따른 요금정산, 콘텐츠 제공, 구매 및 요금결제, 물품배송,
+          금융거래 본인 인증 및 금융서비스
         </div>
+        <div class="td">
+          주문자 정보(이름, 연락처)수령자 정보 (이름, 연락처, 주소)
+        </div>
+        <div class="td">
+          목적 달성 후 5년 (관계법률로 인해 필요 시, 일정기간 보존)
+        </div>
+      </div>
+      <div class="blue">
+        <br />
+        ※ 미동의 시, 비회원 구매가 제한됩니다.
       </div>
     </div>
+
     <script>
       function closePopup() {
         window.close();
