상품상세 수정

--- a/product/product-top1.html
+++ b/product/product-top1.html
@@ -716,7 +716,12 @@
                 <strong>결제방법</strong>
                 <!-- 버튼 이미지 -->
                 <div class="flexbox">
-                  <span class="blue fs-14 span3">휴대폰결제</span>
+                  <span class="blue fs-14 span3" id="pay1display"
+                    >휴대폰결제</span
+                  >
+                  <span class="blue fs-14 span3" id="pay2display"
+                    >무통장입금</span
+                  >
                   <a href="javascript:orderInfo(3)" class="order-hd-open-3"
                     ><img
                       src="https://image.makeshop.co.kr/mysoho/assets/shop/img/common/arr_bottom.png"
