--- a/public-object/footer.html
+++ b/public-object/footer.html
@@ -91,3 +91,6 @@
     <a href="" class="btn-top"></a>
   </div>
 </div>
+<script>
+  let mybutton = document.getElementById("myBtnfooter");
+</script>
