--- a/order/shopping-basket.html
+++ b/order/shopping-basket.html
@@ -47,12 +47,13 @@
             </div>
             <div>장바구니</div>
             <!-- 휴지통이미지 -->
-
-            <img
-              src="https://image.makeshop.co.kr/mysoho/assets/shop/img/btn/h34_waste.png"
-              alt=""
-              onclick="trash()"
-            />
+            <div class="trash-box">
+              <img
+                src="https://image.makeshop.co.kr/mysoho/assets/shop/img/btn/h34_waste.png"
+                alt=""
+                onclick="trash()"
+              />
+            </div>
           </div>
         </div>
         <!-- 구분선 빈박스 -->
@@ -593,7 +594,9 @@
           <strong>결제방법</strong>
           <!-- 버튼 이미지 -->
           <div class="flexbox">
-            <span class="blue fs-14 span3" id="pay1display">휴대폰결제</span>
+            <span class="blue fs-14 span3 pay-checked" id="pay1display"
+              >휴대폰결제</span
+            >
             <span class="blue fs-14 span3" id="pay2display">무통장입금</span>
             <a href="javascript:orderInfo(3)" class="order-hd-open-3"
               ><img
