--- a/product/product-onepiece3.html
+++ b/product/product-onepiece3.html
@@ -866,7 +866,7 @@
                 <strong>결제방법</strong>
                 <!-- 버튼 이미지 -->
                 <div class="flexbox">
-                  <span class="blue fs-14 span3" id="pay1display"
+                  <span class="blue fs-14 span3 pay-checked" id="pay1display"
                     >휴대폰결제</span
                   >
                   <span class="blue fs-14 span3" id="pay2display"
