--- a/admin/adminHome.html
+++ b/admin/adminHome.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
+
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Document</title>
+  <style>
       * {
         margin: 0;
         padding: 0;
@@ -21,26 +22,29 @@
         color: white;
         border-bottom: 1px solid #949ca6;
       }
-      .wrap {
+      #wrap {
         display: flex;
-        height: 840px;
+        min-height: 830px;
       }
-      .nav {
-        height: 100%;
+      .admin-navBar {
+        flex-grow : 1;
         width: 200px;
         padding: 25px;
         background-color: #333;
+
       }
-      .nav div {
+      .admin-navBar div {
         display: flex;
       }
-      .nav a {
+
+      .admin-navBar a {
         text-decoration: none;
         padding: 15px 0;
         width: 100%;
         border-bottom: 1px solid #949ca6;
         color: white;
       }
+
       .head-title {
         display: flex;
         align-items: center;
@@ -55,26 +59,128 @@
         padding: 20px;
         width: 100%;
       }
-    </style>
-  </head>
+      img{
+      max-height: 70px;
+      }
 
-  <body>
-    <div class="header">
-      <h2 class="head-title">관리자페이지</h2>
-      <button class="logout-btn">로그아웃</button>
+      .countItem {
+        display: flex;
+        justify-content: space-between;
+        padding : 5px 20px;
+      }
+      textarea{
+      height : 200px;
+      width : 100%;
+      }
+      .w40{
+      width : 200px;
+      }
+    </style>
+</head>
+<div th:replace="/fragments/adminHeader.html :: fragment-adminHeader"></div>
+
+<div id="wrap">
+  <div th:replace="/fragments/adminNav.html :: fragment-adminNav"></div>
+
+  <script>
+  $(document).ready(function() {
+  $('#summernote').summernote();
+  });
+  </script>
+
+  <div class="content" style="width:100%">
+    <div style="width:100%" >
+
+      <form method="post">
+        <h3 class="sub-title"> 이미지</h3>
+        <table class="table table-striped table-bordered" >
+          <tr >
+
+            <th style="text-align: center;" class="w40">대표 이미지 변경</th>
+            <td ><img th:src="${ dto.item_image_url }">
+              <button>파일 선택</button>
+            </td>
+          </tr>
+        </table>
+
+
+      <h3 class="sub-title"> 상품정보</h3>
+      <table class="table table-striped table-bordered" >
+      <tr>
+        <th style="text-align: center;" class="w40">상품분류</th>
+        <td>
+          <select name="category">
+            <option th:text="${ dto.item_category }" th:value="${ dto.item_category }" value="" selected="selected">대분류</option>
+            <option value="TOP">TOP</option>
+            <option value="BOTTOM">BOTTOM</option>
+            <option value="ONE-PIECE">ONE-PIECE</option>
+            <option value="ACC">ACC</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <th style="text-align: center;" class="w40">상품명</th>
+        <td>
+          <input th:value="${ dto.item_name }" name="item_name"  placeholder="상품명">
+        </td>
+      </tr>
+          <tr>
+            <th style="text-align: center;" class="w40">판매가</th>
+            <td>
+              <input th:value="${ dto.item_price }" name="item_price"  placeholder="10000">
+            </td>
+          </tr>
+          <tr>
+            <th style="text-align: center;" class="w40">색상</th>
+            <td>
+              <input th:value="${ dto.item_option_color }" name="item_option_color"  placeholder="color">
+            </td>
+          </tr>
+          <tr>
+            <th style="text-align: center;" class="w40">사이즈</th>
+            <td>
+              <input th:value="${ dto.item_option_size }" name="item_option_size"  placeholder="S,M,L">
+            </td>
+          </tr>
+        </table>
+
+        <h3 class="sub-title"> 할인쿠폰</h3>
+        <table class="table table-striped table-bordered" >
+          <tr>
+            <th style="text-align: center;" class="w40">할인율</th>
+            <td>
+              <input name=""  placeholder="10">
+              <input type="radio" checked />% 퍼센트
+            </td>
+          </tr>
+        </table>
+
+
+
+        <h3 class="sub-title"> 상품 설명</h3>
+        <table class="table table-striped table-bordered" >
+          <tr >
+            <td >
+                <textarea th:text="${ dto.item_info }" class="textarea" id="" name="item_info"></textarea>
+              <br>
+            </td>
+          </tr>
+        </table>
+        <div style="text-align: center;">
+        <a class="btn btn-primary">등록하기</a>
+        </div>
+      </form>
     </div>
-    <div class="wrap">
-      <div class="nav">
-        <div><a href=""> 회원 관리</a></div>
-        <div><a href=""> 상품 관리</a></div>
-        <div><a href=""> 주문 관리</a></div>
-        <div><a href=""> 리뷰 관리</a></div>
-        <div><a href=""> 문의 관리</a></div>
-        <div><a href=""> 공지사항 관리</a></div>
-      </div>
-      <div class="content">
-        <!-- 관리 페이지 작성 -->
-      </div>
-    </div>
-  </body>
+  </div>
+</div>
+<!--  컨텐츠 끝-->
+</div>
+
+<!-- wrap -->
+
+</body>
+
 </html>
+
+
+
